--- a/charts/internal/cloud-provider-config/templates/cloud-provider-config.yaml
+++ b/charts/internal/cloud-provider-config/templates/cloud-provider-config.yaml
@@ -33,7 +33,9 @@ data:
     [LoadBalancer]
     ipPoolName = "{{ .Values.loadbalancer.ipPoolName }}"
     size = {{ .Values.loadbalancer.size }}
-    logicalRouterId = "{{ .Values.loadbalancer.logicalRouterId }}"
+    tier1GatewayPath = "{{ .Values.loadbalancer.tier1GatewayPath }}"
+    tcpAppProfileName = "{{ .Values.loadbalancer.tcpAppProfileName }}"
+    udpAppProfileName = "{{ .Values.loadbalancer.udpAppProfileName }}"
 
     {{- range $i, $class := .Values.loadbalancer.classes }}
     [LoadBalancerClass {{ $class.name | quote }}]
