--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -25,7 +25,7 @@ images:
 - name: vsphere-cloud-controller-manager
   sourceRepository: github.com/mandelsoft/cloud-provider-vsphere
   repository: eu.gcr.io/gardener-project/test/cloud-provider-vsphere-mandelsoft
-  tag: v1.1.0-24-g898630f
+  tag: v1.1.0-gardener1
   #repository: gcr.io/cloud-provider-vsphere/cpi/release/manager
   #tag: v1.0.0
 - name: machine-controller-manager
