--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,2 @@
 # gardener-extension-provider-vsphere maintainers
-*   @gardener/gardener-extension-provider-vsphere-maintainers
-*   @gardener/gardener-maintainers
+*   @gardener/gardener-extension-provider-vsphere-maintainers @gardener/gardener-maintainers
