--- a/charts/gardener-extension-provider-vsphere/values.yaml
+++ b/charts/gardener-extension-provider-vsphere/values.yaml
@@ -57,10 +57,10 @@ config:
     storage:
       className: gardener.cloud-fast
       capacity: 25Gi
-      storagePolicyName: vSAN Default Storage Policy
 
 gardener:
   garden:
     identity: ""
   seed:
     provider: vsphere
+    region: someregion
