Add sideEffects for admission assets

--- a/charts/gardener-extension-validator-vsphere/charts/application/templates/validatingwebhook-validator.yaml
+++ b/charts/gardener-extension-validator-vsphere/charts/application/templates/validatingwebhook-validator.yaml
@@ -18,6 +18,7 @@ webhooks:
   failurePolicy: Fail
   objectSelector: {}
   namespaceSelector: {}
+  sideEffects: None
   clientConfig:
     {{- if .Values.global.virtualGarden.enabled }}
     url: {{ printf "https://%s.%s/webhooks/validate" (include "name" .) (.Release.Namespace) }}
