--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -15,9 +15,10 @@ images:
   tag: v1.3.1
   targetVersion: ">= 1.14"
 - name: vsphere-cloud-controller-manager
-  sourceRepository: github.com/mandelsoft/cloud-provider-vsphere
-  repository: eu.gcr.io/gardener-project/test/cloud-provider-vsphere-mandelsoft
-  tag: v1.1.0-gardener1
+  sourceRepository: github.com/MartinWeindel/cloud-provider-vsphere
+  repository: eu.gcr.io/gardener-project/test/cloud-provider-vsphere-martinweindel
+  tag: v1.1.0-pre1
+  #tag: v1.1.0-71-g0ba091f
   #repository: gcr.io/cloud-provider-vsphere/cpi/release/manager
   #tag: v1.0.0
 - name: machine-controller-manager
