set remote-auth in cloud-provider-config

--- a/charts/internal/cloud-provider-config/templates/cloud-provider-config.yaml
+++ b/charts/internal/cloud-provider-config/templates/cloud-provider-config.yaml
@@ -57,3 +57,4 @@ data:
     password = "{{ .Values.nsxt.password }}"
     host = "{{ .Values.nsxt.host }}"
     insecure-flag = "{{ .Values.nsxt.insecureFlag }}"
+    remote-auth = "{{ .Values.nsxt.remoteAuth }}"
