--- a/charts/internal/cloud-provider-config/values.yaml
+++ b/charts/internal/cloud-provider-config/values.yaml
@@ -33,4 +33,5 @@ nsxt:
   host: my.nsxt.server.ip.or.fqdn
   username: admin
   password: super-secret
-  insecureFlag: 1
+  insecureFlag: true
+  remoteAuth: false
