--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -28,9 +28,7 @@ images:
 - name: machine-controller-manager-provider-vsphere
   sourceRepository: github.com/gardener/machine-controller-manager-provider-vsphere
   repository: eu.gcr.io/gardener-project/gardener/machine-controller-manager-provider-vsphere
-  # prelease of new OOT implementation
-  #tag: v0.3.0-dev-mw2
-  tag: v0.3.0-dev-4d47e092899966e42cea9b6126dfa7e3daef1526
+  tag: v0.3.1
 - name: vsphere-csi-controller
   sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
   repository: gcr.io/cloud-provider-vsphere/csi/release/driver
