zone dependent optional switchUuid, mcm-provider-vsphere v0.4.0

--- a/charts/internal/machineclass/templates/machineclass.yaml
+++ b/charts/internal/machineclass/templates/machineclass.yaml
@@ -33,6 +33,9 @@ providerSpec:
 {{- end }}
 {{- end }}
   network: {{ $machineClass.network }}
+{{- if $machineClass.switchUuid }}
+  switchUuid: {{ $machineClass.switchUuid }}
+{{- end }}
 {{- if $machineClass.folder }}
   folder: {{ $machineClass.folder }}
 {{- end }}
