--- a/charts/internal/cloud-provider-config/values.yaml
+++ b/charts/internal/cloud-provider-config/values.yaml
@@ -33,5 +33,7 @@ nsxt:
   host: my.nsxt.server.ip.or.fqdn
   username: admin
   password: super-secret
+  #usernameNE: my-network-engineer-user
+  #passwordNE: super-secret
   insecureFlag: true
   remoteAuth: false
