--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -33,7 +33,7 @@ images:
   sourceRepository: github.com/gardener/machine-controller-manager-provider-vsphere
   repository: eu.gcr.io/gardener-project/gardener/machine-controller-manager-provider-vsphere
   tag: "v0.6.1"
-- name: vsphere-csi-controller
+- name: vsphere-csi-driver-controller
   sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
   repository: gcr.io/cloud-provider-vsphere/csi/release/driver
   tag: v2.0.0
