--- a/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
@@ -11,6 +11,10 @@ spec:
   selector:
     matchLabels:
 {{ include "labels" . | indent 6 }}
+  strategy:
+    rollingUpdate:
+      maxUnavailable: {{ .Values.maxUnavailable }}
+      maxSurge: {{ .Values.maxSurge }}
   template:
     metadata:
       annotations:
