set FailureDomainLabels for csi-vsphere.conf

--- a/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
@@ -16,6 +16,10 @@ datacenters: dc1
 insecureFlag: true
 resizerEnabled: false
 loggerLevel: PRODUCTION
+
+#labelRegion: k8s-region
+#labelZone: k8s-zone
+
 resources:
   attacher:
     requests:
