update to cloud-provider-vsphere v1.2 with yaml cloud-provider-config

--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -21,8 +21,7 @@ images:
 - name: vsphere-cloud-controller-manager
   sourceRepository: github.com/MartinWeindel/cloud-provider-vsphere
   repository: eu.gcr.io/gardener-project/test/cloud-provider-vsphere-martinweindel
-  tag: v1.2.0-pre1
-  #tag: v1.1.0-71-g7bb1654
+  tag: v1.2.0-33-g27d58e9
   #repository: gcr.io/cloud-provider-vsphere/cpi/release/manager
   #tag: v1.0.0
 - name: machine-controller-manager
