--- a/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
@@ -25,6 +25,8 @@ spec:
       labels:
 {{ include "labels" . | indent 8 }}
     spec:
+      priorityClassName: gardener-extension-provider-vsphere
+      serviceAccountName: {{ include "name" . }}
       containers:
       - name: {{ include "name" . }}
         image: {{ include "image" . }}
@@ -66,7 +68,6 @@ spec:
           mountPath: /charts_overwrite/
           readOnly: true
         {{- end }}
-      serviceAccountName: {{ include "name" . }}
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
