shoot default storageclass: enable allowVolumeExpansion if resizer is available

--- a/charts/internal/shoot-storageclasses/templates/storageclasses.yaml
+++ b/charts/internal/shoot-storageclasses/templates/storageclasses.yaml
@@ -8,5 +8,6 @@ metadata:
     resources.gardener.cloud/delete-on-invalid-update: "true"
 provisioner: csi.vsphere.vmware.com
 volumeBindingMode: {{ .Values.volumeBindingMode }}
+allowVolumeExpansion: {{ .Values.allowVolumeExpansion }}
 parameters:
   storagePolicyName: "{{ .Values.storagePolicyName }}"
