Expose csi-driver and cloud-controller-manager logs

--- a/charts/gardener-extension-provider-vsphere/templates/configmap-logging.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/configmap-logging.yaml
@@ -20,3 +20,16 @@ data:
         Key_Name            log
         Parser              kubeapiserverParser
         Reserve_Data        True
+
+    [FILTER]
+        Name                parser
+        Match               kubernetes.*vsphere-csi-controller*vsphere-csi*
+        Key_Name            log
+        Parser              kubeapiserverParser
+        Reserve_Data        True
+
+    [FILTER]
+        Name                rewrite_tag
+        Match               kubernetes.*
+        Rule                $tag ^kubernetes\.var\.log\.containers\.(cloud-controller-manager-.+?_.+?_vsphere-cloud-controller-manager|vsphere-csi-controller-.+?_.+?_vsphere-csi) user-exposed.$TAG true
+        Emitter_Name        re_emitted-provider-vsphere
