use secret for cloud-provider-config

--- a/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
+++ b/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
@@ -100,5 +100,5 @@ spec:
         secret:
           secretName: cloud-controller-manager-server
       - name: cloud-provider-config
-        configMap:
-          name: cloud-provider-config
+        secret:
+          secretName: cloud-provider-config
