VPA for validator/admission component

--- a/charts/gardener-extension-provider-vsphere/values.yaml
+++ b/charts/gardener-extension-provider-vsphere/values.yaml
@@ -10,6 +10,10 @@ maxSurge: 50%
 resources: {}
 vpa:
   enabled: true
+# resourcePolicy:
+#   minAllowed:
+#     cpu: 100m
+#     memory: 128Mi
   updatePolicy:
     updateMode: "Auto"
 
