--- a/branch.cfg
+++ b/branch.cfg
@@ -15,39 +15,33 @@ cfgs:
               cronjob:
                 interval: '5m'
               version: ~
-
-  legacy-release-branches:
-    index: 1
-    branches: ['release-v1.2.*']
-    inherit:
-      gardener-extension-provider-vsphere:
-        jobs:
-          release:
-            traits:
-              release:
-                nextversion: 'bump_patch'
-
-  only-master:
-    index: 1
-    branches: ['master']
-    inherit:
       gardener-extension-provider-vsphere:
         base_definition:
           steps:
             verify:
-              image: 'eu.gcr.io/gardener-project/3rd/golang:1.15.5'
+              image: 'eu.gcr.io/gardener-project/3rd/golang:1.16.2'
 
   release-branches:
     index: 1
-    branches: ['release-v1\.(?!2.*).*$']
+    branches: ['release-v0\..*']
+    inherit:
+      gardener-extension-provider-vsphere:
+        base_definition:
+          steps:
+            verify:
+              image: 'eu.gcr.io/gardener-project/3rd/golang:1.16.2'
+        jobs:
+          release:
+            traits:
+              release:
+                nextversion: 'bump_patch'
+
+  release-branches-0-6:
+    index: 2
+    branches: ['release-v0\.6']
     inherit:
       gardener-extension-provider-vsphere:
         base_definition:
           steps:
             verify:
               image: 'eu.gcr.io/gardener-project/3rd/golang:1.15.5'
-        jobs:
-          release:
-            traits:
-              release:
-                nextversion: 'bump_patch'
