updated the provider name in the machine class template to align with oot

--- a/charts/internal/machineclass/templates/machineclass.yaml
+++ b/charts/internal/machineclass/templates/machineclass.yaml
@@ -68,5 +68,5 @@ providerSpec:
 secretRef:
   name: {{ $machineClass.name }}
   namespace: {{ $.Release.Namespace }}
-provider: vspheredriver//127.0.0.1:8080
+provider: vsphere
 {{- end }}
