--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/vsphere-csi-controller.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/vsphere-csi-controller.yaml
@@ -10,6 +10,7 @@ labels:
   role: csi-plugin-controller
 spec:
   serviceName: vsphere-csi-controller
+  revisionHistoryLimit: 1
   replicas: {{ .Values.replicas }}
   updateStrategy:
     type: RollingUpdate
