using garden clusterIdentity instead of obsolete garden identity

--- a/charts/gardener-extension-provider-vsphere/templates/configmap.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/configmap.yaml
@@ -17,7 +17,7 @@ data:
       qps: {{ required ".Values.config.clientConnection.qps is required" .Values.config.clientConnection.qps }}
       burst: {{ required ".Values.config.clientConnection.burst is required" .Values.config.clientConnection.burst }}
 {{- end }}
-    gardenId: {{ .Values.gardener.garden.identity }}
+    gardenId: {{ .Values.gardener.garden.clusterIdentity }}
 {{- if .Values.config.machineImages }}
     machineImages:
 {{ toYaml .Values.config.machineImages | indent 4 }}
