--- a/charts/gardener-extension-validator-vsphere/charts/application/templates/rbac.yaml
+++ b/charts/gardener-extension-validator-vsphere/charts/application/templates/rbac.yaml
@@ -9,10 +9,19 @@ rules:
 - apiGroups:
   - core.gardener.cloud
   resources:
+  - shoots
   - cloudprofiles
+  - secretbindings
   verbs:
   - get
   - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
