--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/serviceaccount.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/serviceaccount.yaml
@@ -4,3 +4,27 @@ kind: ServiceAccount
 metadata:
   name: csi-driver-node
   namespace: {{ .Release.Namespace }}
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: vsphere-csi-node-role
+  namespace: {{ .Release.Namespace }}
+rules:
+  - apiGroups: [""]
+    resources: ["configmaps"]
+    verbs: ["get", "list", "watch"]
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: vsphere-csi-node-binding
+  namespace: {{ .Release.Namespace }}
+subjects:
+  - kind: ServiceAccount
+    name: csi-driver-node
+    namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: Role
+  name: vsphere-csi-node-role
+  apiGroup: rbac.authorization.k8s.io
