--- a/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
@@ -86,3 +86,5 @@ csiSnapshotController:
 
 volumesnapshots:
   enabled: false # currently not supported by vsphere-csi-driver
+
+vsphereWithKubernetes: false
