--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -54,7 +54,8 @@ images:
 - name: machine-controller-manager-provider-vsphere
   sourceRepository: github.com/gardener/machine-controller-manager-provider-vsphere
   repository: eu.gcr.io/gardener-project/gardener/machine-controller-manager-provider-vsphere
-  tag: "v0.10.0"
+  # experimental support for vm-operator-api PR #14
+  tag: "v0.11.0-dev-312f3dd05ed81e4f39f11b199326b1142fa40666"
 - name: vsphere-csi-driver-controller
   #sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
   #repository: gcr.io/cloud-provider-vsphere/csi/release/driver
