--- a/charts/internal/cloud-provider-config/templates/cloud-provider-config.yaml
+++ b/charts/internal/cloud-provider-config/templates/cloud-provider-config.yaml
@@ -5,4 +5,8 @@ metadata:
   namespace: {{ .Release.Namespace }}
 type: Opaque
 data:
+{{- if .Values.vsphereWithKubernetes }}
+  cloudprovider.conf: {{ b64enc "nothing" }}
+{{- else }}
   cloudprovider.conf: {{ include "cloud-provider-config" . | b64enc }}
+{{- end }}
