--- a/charts/internal/machineclass/templates/machineclass.yaml
+++ b/charts/internal/machineclass/templates/machineclass.yaml
@@ -10,10 +10,14 @@ metadata:
 type: Opaque
 data:
   userData: {{ $machineClass.secret.cloudConfig | b64enc }}
+{{- if $.Values.vsphereWithKubernetes }}
+  vsphereKubeconfig: {{ $machineClass.secret.vsphereKubeconfig | b64enc }}
+{{- else }}
   vsphereHost: {{ $machineClass.secret.vsphereHost | b64enc }}
   vsphereUsername: {{ $machineClass.secret.vsphereUsername | b64enc }}
   vspherePassword: {{ $machineClass.secret.vspherePassword | b64enc }}
   vsphereInsecureSSL: {{ $machineClass.secret.vsphereInsecureSSL | b64enc }}
+{{- end }}
 ---
 apiVersion: machine.sapcloud.io/v1alpha1
 kind: MachineClass
@@ -21,44 +25,62 @@ metadata:
   name: {{ $machineClass.name }}
   namespace: {{ $.Release.Namespace }}
 providerSpec:
-  region: {{ $machineClass.region }}
-  datacenter: {{ $machineClass.datacenter }}
+{{- if not $.Values.vsphereWithKubernetes }}
+  V1:
+    region: {{ $machineClass.region }}
+    datacenter: {{ $machineClass.datacenter }}
 {{- if $machineClass.hostSystem }}
-  hostSystem: {{ $machineClass.hostSystem }}
+    hostSystem: {{ $machineClass.hostSystem }}
 {{- else }}
 {{- if $machineClass.resourcePool }}
-  resourcePool: {{ $machineClass.resourcePool }}
+    resourcePool: {{ $machineClass.resourcePool }}
 {{- else }}
-  computeCluster: {{ $machineClass.computeCluster }}
+    computeCluster: {{ $machineClass.computeCluster }}
 {{- end }}
 {{- end }}
-  network: {{ $machineClass.network }}
+    network: {{ $machineClass.network }}
 {{- if $machineClass.switchUuid }}
-  switchUuid: {{ $machineClass.switchUuid }}
+    switchUuid: {{ $machineClass.switchUuid }}
 {{- end }}
 {{- if $machineClass.folder }}
-  folder: {{ $machineClass.folder }}
+    folder: {{ $machineClass.folder }}
 {{- end }}
 {{- if $machineClass.datastoreCluster }}
-  datastoreCluster: {{ $machineClass.datastoreCluster }}
+    datastoreCluster: {{ $machineClass.datastoreCluster }}
 {{- else }}
-  datastore: {{ $machineClass.datastore }}
+    datastore: {{ $machineClass.datastore }}
 {{- end }}
-  templateVM: {{ $machineClass.templateVM }}
+    templateVM: {{ $machineClass.templateVM }}
 {{- if $machineClass.guestId }}
-  guestId: {{ $machineClass.guestId }}
+    guestId: {{ $machineClass.guestId }}
 {{- end }}
-  numCpus: {{ $machineClass.numCpus }}
-  memory: {{ $machineClass.memory }}
+    numCpus: {{ $machineClass.numCpus }}
+    memory: {{ $machineClass.memory }}
 {{- if $machineClass.memoryReservationLockedToMax }}
-  memoryReservationLockedToMax: {{ $machineClass.memoryReservationLockedToMax }}
+    memoryReservationLockedToMax: {{ $machineClass.memoryReservationLockedToMax }}
 {{- end }}
 {{- if $machineClass.extraConfig }}
-  extraConfig:
-{{ toYaml $machineClass.extraConfig | indent 4 }}
+    extraConfig:
+{{ toYaml $machineClass.extraConfig | indent 6 }}
 {{- end }}
-  systemDisk:
-  {{ toYaml $machineClass.systemDisk | indent 2 }}
+    systemDisk:
+  {{ toYaml $machineClass.systemDisk | indent 4 }}
+{{- else }}
+  V2:
+    namespace: {{ $machineClass.namespace }}
+    imageName: {{ $machineClass.imageName }}
+    className: {{ $machineClass.className }}
+    networkType: {{ $machineClass.networkType }}
+    networkName: {{ $machineClass.networkName }}
+{{- if $machineClass.storageClass }}
+    storageClass: {{ $machineClass.storageClass }}
+{{- end}}
+{{- if $machineClass.resourcePolicyName }}
+    resourcePolicyName: {{ $machineClass.resourcePolicyName }}
+{{- end}}
+    systemDisk:
+  {{ toYaml $machineClass.systemDisk | indent 4 }}
+{{- end }}
   sshKeys:
 {{ toYaml $machineClass.sshKeys | indent 4 }}
 {{- if $machineClass.tags }}
