--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/secret-csi-vsphere-config.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/secret-csi-vsphere-config.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.vsphereWithKubernetes }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,3 +7,4 @@ metadata:
 type: Opaque
 data:
   csi-vsphere.conf: {{ include "csi-vsphere-conf" . | b64enc }}
+{{- end }}
