--- a/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
+++ b/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.vsphereWithKubernetes }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -103,3 +104,4 @@ spec:
       - name: cloud-provider-config
         secret:
           secretName: cloud-provider-config
+{{- end }}
