--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/daemonset.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/daemonset.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.vsphereWithKubernetes }}
 kind: DaemonSet
 apiVersion: apps/v1
 metadata:
@@ -147,3 +148,4 @@ spec:
           hostPath:
             path: /sys/devices
             type: Directory
+{{- end }}
