--- a/charts/internal/shoot-system-components/charts/vsphere-cloud-controller-manager/templates/rbac-cloud-controller-manager.yaml
+++ b/charts/internal/shoot-system-components/charts/vsphere-cloud-controller-manager/templates/rbac-cloud-controller-manager.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.vsphereWithKubernetes }}
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -104,3 +105,4 @@ subjects:
     name: cloud-controller-manager
     namespace: kube-system
 ---
+{{- end }}
