Limit TLS cipher suites

--- a/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
+++ b/charts/internal/seed-controlplane/charts/vsphere-cloud-controller-manager/templates/cloud-controller-manager.yaml
@@ -56,7 +56,7 @@ spec:
         - --authorization-kubeconfig=/var/lib/cloud-controller-manager/kubeconfig
         - --tls-cert-file=/var/lib/cloud-controller-manager-server/cloud-controller-manager-server.crt
         - --tls-private-key-file=/var/lib/cloud-controller-manager-server/cloud-controller-manager-server.key
-        - --tls-cipher-suites={{ include "kubernetes.tlsCipherSuites" . | replace "\n" "," | trimPrefix "," }}
+        - --tls-cipher-suites={{ .Values.tlsCipherSuites | join "," }}
         - --v=2
         env:
         - name: ENABLE_ALPHA_NSXT_LB
