--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/vpa-vsphere-csi-controller.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/vpa-vsphere-csi-controller.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.vsphereWithKubernetes }}
 ---
 apiVersion: autoscaling.k8s.io/v1beta2
 kind: VerticalPodAutoscaler
@@ -16,3 +17,4 @@ spec:
     name: vsphere-csi-controller
   updatePolicy:
     updateMode: Auto
+{{- end }}
