vsphere-csi works (if webhooks vmware-system-vmop-validating-webhook-configuration and vmware-system-tkg-validating-webhook-configuration are disabled)

--- a/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
@@ -88,3 +88,13 @@ volumesnapshots:
   enabled: false # currently not supported by vsphere-csi-driver
 
 vsphereWithKubernetes: false
+
+#supervisor:
+#  endpointIP: 1.2.3.4
+#  port: xxx
+#  token: xxx
+#  namespace: ns
+#  cacert: ca
+
+#clusterName: shoot--foo--bar
+#clusterDistribution: ""
