--- a/charts/internal/shoot-storageclasses/values.yaml
+++ b/charts/internal/shoot-storageclasses/values.yaml
@@ -1,3 +1,4 @@
 storagePolicyName: vSAN Default Storage Policy
 volumeBindingMode: Immediate
 allowVolumeExpansion: false
+storagePolicyNameKey: storagePolicyName
