--- a/charts/internal/shoot-storageclasses/templates/storageclasses.yaml
+++ b/charts/internal/shoot-storageclasses/templates/storageclasses.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: {{ include "storageclassversion" . }}
+apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: default-class
@@ -10,4 +10,4 @@ provisioner: csi.vsphere.vmware.com
 volumeBindingMode: {{ .Values.volumeBindingMode }}
 allowVolumeExpansion: {{ .Values.allowVolumeExpansion }}
 parameters:
-  storagePolicyName: "{{ .Values.storagePolicyName }}"
+  {{ .Values.storagePolicyNameKey }}: "{{ .Values.storagePolicyName }}"
